--- a/creative-agency.css
+++ b/creative-agency.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    20/04/2021
-Author:    Themewiz
+Last change:    14/09/2021
+Author:    creativemaze
 Primary use:    Creative Agency
 -------------------------------------------------------------------*/
 
@@ -99,7 +99,6 @@ ul{
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.3em;
-	margin-top: 0;
 }
 
 .creative_info{
@@ -113,7 +112,7 @@ ul{
 	letter-spacing: 1px;
 	text-align: center;
 	padding: 10px 10px 0;
-	line-height: 1.6em;
+	line-height: 1.5em;
 }
 
 /* 2. HEADER
@@ -132,6 +131,10 @@ ul{
 	text-decoration: none;
 	color: #111111;
 	transition: 0.5s;
+}
+
+.navbar-header a.navbar-brand:hover{
+	color: #111111;
 }
 
 nav.navbar .navbar-brand img.logo{
@@ -365,7 +368,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -392,12 +395,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	justify-content: center;
 	align-items: center;
 	min-height: 750px;
+	height: 100vh;
 }
 
 .slide__content{
 	position: relative;
 	z-index: 1000;
 	min-height: 750px;
+	height: 100vh;
 	text-align: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -469,13 +474,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .prev_slide,
 .next_slide{
-	font-size: 18px;
+	font-size: 14px;
 	transition: 0.6s ease;
 	border-radius: 0 3px 3px 0;
-	background-color: #111111;
+	background: transparent;
 	width: auto;
-	padding: 12px 21px;
-	color: #ffffff;
+	padding: 10px 16px;
+	color: #111111;
 	cursor: pointer;
 	border: solid 1px #111111;	
 }
@@ -501,20 +506,20 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .next_slide:hover,
 .prev_slide:hover{
-	background-color: transparent;
-	color: #111111;
+	background-color: #111111;
+	color: #ffffff;
 	border-color: #111111;
 }
 
 .header_box{
 	position: relative;
 	z-index: 9999;
-	max-width: 800px;
+	max-width: 700px;
 	padding: 0 20px;
 	width: 100%;
 	margin: 0 auto;
 	text-align: center;
-	margin-top: -125px;
+	margin-top: -135px;
 	min-height: 50px;
 }
 
@@ -547,7 +552,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .box_content{
-	max-width: 400px;
+	max-width: 350px;
 	margin: auto;
 	padding: 0 50px;
 	text-align: center;
@@ -590,14 +595,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: auto;
 	height: 1px;
 	border-bottom: solid 2px #111111;
-	padding-top: 15px;
+	padding-top: 13px;
 }
 
 .light_crumb{
 	border-bottom: solid 2px #ffffff;
 }
 
-.boxslide .slick-dots {
+.boxslide-one .slick-dots {
 	position: absolute;
 	z-index: 999999;
 	left: 50%;
@@ -610,7 +615,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	list-style-type: none;
 }
 
-.boxslide .slick-dots button{
+.boxslide-one .slick-dots button{
 	display: block;
 	width: 1.3rem;
 	height: 1.3rem;
@@ -621,15 +626,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-indent: -9999px;
 }
 
-.boxslide li.slick-active button{
+.boxslide-one li.slick-active button{
 	background-color: #111111;
 }
 
-.boxslide .slick-dots button:hover{
+.boxslide-one .slick-dots button:hover{
 	background-color: #111111;
 }
 
-.boxslide .slick-dots li{
+.boxslide-one .slick-dots li{
 	margin: 6px 0.40rem;
 }
 
@@ -705,7 +710,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	flex: 50%;
 	width: 50%;
-	max-width: 400px;
+	max-width: 350px;
 	margin: auto;
 	background-color: #ec2F4B;
 }
@@ -804,7 +809,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -831,7 +836,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -963,7 +968,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 25%;
 	width: 25%;
 	padding: 0 45px;
-	border-right: solid 1px #f1f1f1;
+	border-right: solid 1px #6f6f6f;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -980,27 +985,24 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0;
 	text-align: left;
 	background: transparent;
-	transition: 0.5s;
 }
 
 .icon_box .fas,
 .icon_box .far{
-	font-size: 40px;
+	font-size: 35px;
 	color: #ec2F4B;
 	text-align: left;
 	display: block;
-	transition: 0.5s;
 }
 
 .icon_box h3{
 	color: #111111;
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 20px;
+	font-size: 18px;
 	font-weight: 600;
 	display: block;
 	text-align: left;
 	letter-spacing: 1px;
-	transition: 0.5s;
 	line-height: 1.4em;
 }
 
@@ -1013,7 +1015,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: left;
-	transition: 0.5s;
 	line-height: 1.5em;
 }
 
@@ -1105,7 +1106,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
@@ -1138,8 +1139,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	margin: 0 0 9em;
 	min-height: 400px;
-	padding: 6em 25px;
-	background-color: #f6f6f6;
+	padding: 7em 25px;
+	background-color: #eeeeee;
 }
 
 .creative_group_four{
@@ -1172,7 +1173,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	position: relative;
 	overflow: hidden;
 	transition: .5s ease;
-	cursor: pointer;
 }
 
 .featured_image .featured_box > img{
@@ -1206,7 +1206,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 	color: #111111;
 	letter-spacing: 1px;
-	text-align: center;
+	text-align: left;
 	line-height: 1.4em;
 }
 
@@ -1231,6 +1231,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	transform: translate(-50%, -50%);
 	font-size: 20px;
 	color: #111111;
+	cursor: pointer;
 }
 
 .featured_image:hover .overlay {
@@ -1259,9 +1260,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .team_box{
 	position: relative;
-	transition: ease-in-out 3.25s;
 	text-align: center;
-	max-width: 400px;
+	max-width: 350px;
 	margin: auto;
 }
 
@@ -1336,18 +1336,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	display: block;
 }
 
-.team_overlay{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 100%;
-	width: 100%;
-	opacity: 1;
-	background: rgba(0,0,0,0.6);
-}
-
 .team_name{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
@@ -1383,7 +1371,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .creative_area_six{
 	position: relative;
 	min-height: 450px;
-	margin: 0 0 9em;
+	margin: 0;
 	padding: 7em 0;
 	display: flex;
 	flex-direction: column;
@@ -1421,15 +1409,14 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .square_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
-	overflow: hidden;
 }
 
 .square_box{
 	max-width: 500px;
-	margin: 0 auto;
+	margin: 0;
 }
 
 .square_box h2{
@@ -1493,14 +1480,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: 14px;
 }
 
-.client_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	transition: 0.5s;
-	overflow: hidden;
-}
-
 .client_name{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 16px;
@@ -1519,7 +1498,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .client_title{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 13px;
+	font-size: 14px;
 	font-weight: 600;
 	display: block;
 	color: #ec2F4B;
@@ -1578,14 +1557,68 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.7. Creative Area Seven --- */
 .creative_area_seven{
 	width: 100%;
-	margin: 0 0 9em;
-	min-height: 400px;
-	padding: 6em 25px;
-	background-color: #f6f6f6;
+	min-height: 100px;
+	margin-bottom: 9em;
+	
 }
 
 .creative_group_seven{
-	max-width: 1400px;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px;
+	border-bottom: solid 1px #e0e0e0;
+}
+
+.count_col{
+	flex: 25%;
+	width: 25%;
+	padding: 0 25px;
+	border-right: solid 1px #e0e0e0;
+}
+
+.count_box{
+	max-width: 300px;
+	margin: auto;
+	padding: 0 25px;
+}
+
+.fourth_border{
+	border-right: none;
+}
+
+.count_box h3{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: 600;
+	display: block;
+	text-align: center;
+	color: #111111;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+}
+
+.count_box .counter{
+	font-family: 'Montserrat' , Arial, sans-serif;
+	font-size: 30px;
+	font-weight: 700;
+	display: block;
+	text-align: center;
+	color: #ec2F4B;
+	letter-spacing: 1px;
+}
+
+/* --- 3.8. Creative Area Eight --- */
+.creative_area_eight{
+	width: 100%;
+	margin: 0 0 9em;
+	min-height: 400px;
+	padding: 6em 25px;
+	background-color: #eeeeee;
+}
+
+.creative_group_eight{
+	max-width: 1280px;
 	width: 100%;
 	margin: 0 auto;
 	display: flex;
@@ -1687,11 +1720,8 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 a.blog_btn{
-	width: 120px;	
-    border: none;
+	max-width: 120px;	
     color: #111111;
-	margin: 0;
-	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
     display: inline-block;
@@ -1699,92 +1729,25 @@ a.blog_btn{
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
-    cursor: pointer;
 	letter-spacing: 1px;
 	text-align: left;
-	line-height: 1.2em;
 }
 
 a.blog_btn::after{
 	content: "\203A";
-	font-size: 25px;
+	font-size: 20px;
 	margin: 0;
 	padding: 0;
-	display: inline;
+	display: inline-block;
 	height: auto;
-	margin-left: -4px;
-	top: -16px;
+	padding-left: 5px;
+	top: 1px;
 	position: relative;
 }
 
 a.blog_btn:hover,
 .blog_title a:hover{
 	color: #ec2F4B;
-}
-
-.blog_crumb{
-	width: 102px;
-	height: 1px;
-	display: inline-block;
-	border-bottom: solid 2px #111111;
-	margin-bottom: 8px;
-	transition: 0.5s;
-}
-
-a.blog_btn:hover .blog_crumb{
-	border-color: #ec2F4B;
-}
-
-/* --- 3.8. Creative Area Eight --- */
-.creative_area_eight{
-	max-width: 1200px;
-	padding: 0 25px;
-	margin: 0 auto 9em;
-}
-
-.creative_group_eight{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	padding-top: 40px;
-}
-
-.count_col{
-	flex: 25%;
-	width: 25%;
-	border-right: solid 1px #e0e0e0;
-	padding: 0 20px;
-}
-
-.count_border{
-	border-right: none;
-}
-
-.count_box{
-	max-width: 300px;
-	margin: auto;
-	padding: 10px 0;
-}
-
-.count_box h4{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: 500;
-	display: block;
-	text-align: center;
-	color: #111111;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-}
-
-.count_box .counter{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 25px;
-	font-weight: 700;
-	display: block;
-	text-align: center;
-	color: #ec2F4B;
-	letter-spacing: 1px;
 }
 
 /* --- 3.9. Creative Area Nine --- */
@@ -1800,6 +1763,7 @@ a.blog_btn:hover .blog_crumb{
 	background-repeat: no-repeat;
 	background-position: center;
 	padding: 3em 0;
+	margin-bottom: 2em;
 }
 
 .creative_group_nine{
@@ -1853,7 +1817,7 @@ a.blog_btn:hover .blog_crumb{
 	color: #333333;
 	text-transform: capitalize;
 	letter-spacing: 1px;
-	background-color: #ffffff;
+	background-color: #f6f6f6;
 }
 
 .col_info input[type="submit"]{
@@ -1863,7 +1827,8 @@ a.blog_btn:hover .blog_crumb{
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 14px;
-	font-weight: normal;
+	font-weight: 500;
+	text-transform: uppercase;
 	margin: 0;
 	margin-left: -4px;
 	color: #ffffff;
@@ -1875,9 +1840,14 @@ a.blog_btn:hover .blog_crumb{
 }
 
 .col_info input[type="submit"]:hover{
-	background-color: transparent;
-	color: #111111;
+	background-color: #111111;
+	color: #ffffff;
 	border-color: #111111;
+}
+
+.col_info input[type="email"]:focus{
+	outline: none;
+	box-shadow: 0 0 0 2px #e0e0e0;
 }
 
 /* 4. FOOTER
@@ -1888,7 +1858,6 @@ a.blog_btn:hover .blog_crumb{
 	position: relative;
 	clear: both;
 	height: 100%;
-	background-color: #111111;
 }
 
 .footer_area{
@@ -1907,7 +1876,7 @@ a.blog_btn:hover .blog_crumb{
 }
 
 .footer_col{
-	padding-top: 4.5em;
+	padding-top: 3.5em;
 }
 
 a.footer-brand img{
@@ -1923,7 +1892,7 @@ a.footer-brand img{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	text-decoration: none;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 }
 
@@ -1932,7 +1901,7 @@ a.footer-brand img{
 	font-size: 14px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 	padding: 20px 0;
 	line-height: 1.5em;
@@ -1945,7 +1914,7 @@ a.footer-brand img{
 .footer_social .fab,
 .footer_social .fa{
 	font-size: 16px;
-	color: #ffffff;
+	color: #111111;
 	text-align: left;
 }
 
@@ -1970,7 +1939,7 @@ a.footer-brand img{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: capitalize;
-	color: #ffffff;
+	color: #111111;
 }
 
 .footer_col > ul > li{
@@ -1983,7 +1952,7 @@ a.footer-brand img{
 	font-weight: normal;
 	letter-spacing: 1px;
 	text-decoration: none;
-	color: #ffffff;
+	color: #111111;
 	text-align: justify;
 	transition: 0.5s;
 }
@@ -2031,7 +2000,7 @@ a.footer-brand img{
 	padding-top: 35px;
 	padding-bottom: 10px;
 	margin-top: 35px;
-	border-top: solid 1px #6f6f6f;
+	border-top: solid 1px #e0e0e0;
 }
 
 .details p{
@@ -2039,13 +2008,21 @@ a.footer-brand img{
 	font-size: 13px;
 	font-weight: normal;
 	letter-spacing: 1px;
-	color: #ffffff;
+	color: #111111;
 	text-align: center;
 }
 
 /* 5. RESPONSIVE
  ----------- */
 @media only screen and (max-width: 1024px){
+	.header__content{
+		height: auto;
+	}
+	
+	.slide__content{
+		height: auto;
+	}
+	
 	.creative_col{
 		flex: 100%;
 		width: 100%;
@@ -2086,7 +2063,7 @@ a.footer-brand img{
 	.client_col{
 		flex: 100%;
 		width: 100%;
-		text-align: center;
+		margin-top: 25px;
 	}
 	
 	.blog_col{
@@ -2191,7 +2168,7 @@ a.footer-brand img{
 	}
 	
 	.header_box{
-		max-width: 400px;
+		max-width: 350px;
 	}
 	
 	.featured_col{
@@ -2202,7 +2179,11 @@ a.footer-brand img{
 	.count_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 30px;
+		margin: 20px 0;
+	}
+	
+	.border_second{
+		border-right: none;
 	}
 	
 	.footer_col{
@@ -2277,8 +2258,7 @@ a.footer-brand img{
 	.creative_col,
 	.team_col,
 	.square_col,
-	.client_col,
-	.client_details{
+	.client_col{
 		padding: 0;
 	}
 	
@@ -2298,6 +2278,10 @@ a.footer-brand img{
 		width: 100%;
 		margin-left: 0;
 	}
+	
+	.col_head h3{
+		font-size: 25px;
+	}
 }
 
 @media only screen and (max-width: 360px){
@@ -2312,6 +2296,6 @@ a.footer-brand img{
 
 @media only screen and (max-width: 320px){
 	.col_head h3{
-		font-size: 25px;
+		font-size: 20px;
 	}
 }
