--- a/architecture.css
+++ b/architecture.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    24/05/2021
-Author:    Themewiz
+Last change:    09/10/2021
+Author:    creativemaze
 Primary use:    Architecture
 -------------------------------------------------------------------*/
 
@@ -98,7 +98,6 @@ ul{
 	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.3em;
-	margin-top: 0;
 }
 
 .architecture_info{
@@ -125,12 +124,18 @@ ul{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	margin: 0;
+	padding-top: 12px;
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
-	color: #ffffff !important;
+	color: #ffffff;
 	transition: 0.5s;
+}
+
+.navbar-header a.navbar-brand:hover{
+	color: #ffffff;
 }
 
 nav.navbar .navbar-brand img.logo{
@@ -420,8 +425,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	max-width: 650px;
 	display: block;
 	margin-left: 10vw;
-	position: relative;
-	z-index: 9;
 	text-align: left;
 	padding-right: 10px;
 }
@@ -441,18 +444,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
-	display: inline-block;
+	display: block;
 	color: #f2f2f2;
 	line-height: 1.5em;
 	letter-spacing: 1px;
 	max-width: 500px;
 	text-align: left;
 	padding: 25px 0;
-}
-
-.buttoncol{
-	max-width: 500px;
-	margin: auto;
 }
 
 .buttoncol a{
@@ -533,7 +531,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .border_box .fas,
 .border_box .far{
-	font-size: 40px;
+	font-size: 35px;
 	color: #556270;
 	text-align: left;
 	display: block;
@@ -637,11 +635,17 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 }
 
-.architecture_group_two,
+.architecture_group_two{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
 .square_box_area{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
+	max-width: 900px;
 }
 
 .square_col_left{
@@ -672,7 +676,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .square_box{
 	max-width: 450px;
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
@@ -783,7 +787,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .info_col_button a{
 	background-color: #556270;
-	width: 165px;
+	width: 150px;
 	min-height: 30px;
 	margin: 30px 0 0;
     border: none;
@@ -793,7 +797,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-transform: uppercase;
     display: block;
     font-size: 13px;
-	font-weight: 700;
+	font-weight: 600;
 	font-family: 'Raleway', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
@@ -811,10 +815,10 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.3. Architecture Area Three --- */
 .architecture_area_three{
 	width: 100%;
-	margin: 0 0 9em;
+	margin: 0;
 	min-height: 400px;
 	padding: 7em 25px;
-	background-color: #f6f6f6;
+	background-color: #eeeeee;
 }
 
 .architecture_group_three{
@@ -854,7 +858,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .featured_area{
 	overflow: hidden;
 	position: relative;
-	padding-bottom: 12px;
+	padding-bottom: 0;
 	padding-right: 12px;
 	padding-top: 12px;
 	padding-left: 12px;
@@ -892,7 +896,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	line-height: 1.5em;
 	text-transform: uppercase;
-	margin-top: 0;
+	margin: 0;
 }
 
 .featured_content{
@@ -918,16 +922,60 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.4. Architecture Area Four --- */
 .architecture_area_four{
-	max-width: 1200px;
-	margin: 0 auto 9em;
-	padding: 0 25px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	min-height: 400px;
+	height: 100%;
+	text-align: center;
+	background-color: #556270;
+	margin: 0;
 }
 
-.architecture_group_four{
+/* --- 3.5. Architecture Area Five --- */
+.architecture_area_five{
+	max-width: 1100px;
+	margin: 0 auto 9em;
+	margin-top:  -300px;
+	padding: 0 30px;
+	position: relative;
+	z-index: 9999;
+}
+
+.architecture_group_five{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
+	padding: 40px 0 0 0;
+	background-color: #ffffff;
+	margin-top: 40px;
+}
+
+.bg_head{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 40px;
+	font-weight: 700;
+	display: block;
+	color: #ffffff;
+	text-align: center;
+	letter-spacing: 1px;
+	line-height: 1.3em;
+}
+
+.bg_info{
+	max-width: 600px;
+	margin: 0 auto;
+	font-family: 'Roboto' , Arial, sans-serif;
+	font-size: 16px;
+	font-weight: normal;
+	display: block;
+	color: #f2f2f2;
+	letter-spacing: 1px;
+	text-align: center;
+	padding: 10px 10px 0;
+	line-height: 1.5em;
 }
 
 .count_col{
@@ -963,7 +1011,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .count_box .counter{
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: 700;
 	display: block;
 	text-align: center;
@@ -971,8 +1019,173 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	letter-spacing: 1px;
 }
 
-/* --- 3.5. Architecture Area Five --- */
-.architecture_area_five{
+/* --- 3.6. Architecture Area Six --- */
+.architecture_area_six{
+	max-width: 1400px;
+	margin: 0 auto 9em;
+	padding: 0 30px;
+	position: relative;
+}
+
+.architecture_group_six{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding-top: 40px;
+}
+
+.blog_group{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+	padding-bottom: 12px;
+	padding-right: 12px;
+	padding-top: 12px;
+	padding-left: 12px;
+}
+
+.blog_col{
+	flex: 50%;
+	width: 50%;
+	padding: 0 20px;
+}
+
+.blog_area{
+	flex: 50%;
+	width: 50%;
+}
+
+.blog_box{
+	max-width: 350px;
+	margin: 0 auto;
+	position: relative;
+	text-align: center;
+	transition: 0.5s;
+	overflow: hidden;
+	
+}
+
+.blog_feat{
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: #ffffff;
+}
+
+.blog_col img{
+	vertical-align: middle;
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+.blog_box > a > img{
+	transition: ease-in-out 1.25s;
+}
+
+.blog_box > a > img:hover{
+	transform: scale(1.15);
+}
+
+.blog_content{
+	max-width: 350px;
+	text-align: left;
+	padding: 25px 10px 25px 25px;
+}
+
+.blog_date{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 13px;
+	display: block;
+	font-weight: 600;
+	color: #696969;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	text-align: left;
+	width: 250px;
+}
+
+.blog_title a{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 18px;
+	display: block;
+	font-weight: 600;
+	color: #111111;
+	letter-spacing: 1px;
+	text-align: left;
+	text-decoration: none;
+	transition: 0.5s;
+	line-height: 1.4em;
+}
+
+.blog_title a:hover,
+a.blog_btn:hover{
+	opacity: 0.6;
+}
+
+a.blog_btn{
+	max-width: 120px;	
+    color: #111111;
+    text-decoration: none;
+	text-transform: uppercase;
+    display: inline-block;
+    font-size: 13px;
+	font-weight: 600;
+	font-family: 'Raleway', Arial, sans-serif;
+    transition: 0.5s;
+    cursor: pointer;
+	letter-spacing: 1px;
+	text-align: center;
+	line-height: 1.2em;
+	padding-bottom: 3px;
+	padding-top: 10px;
+}
+
+a.blog_btn::after{
+	content: "\203A";
+	font-size: 20px;
+	margin: 0;
+	padding: 0;
+	display: inline-block;
+	height: auto;
+	padding-left: 5px;
+	top: 1px;
+	position: relative;
+}
+
+.box_button a{
+	background-color: #556270;
+	width: 150px;
+	min-height: 25px;
+	margin: auto;
+	margin-top: 50px;	
+    border: none;
+    color: #ffffff;
+    padding: 13px 14px;
+    text-decoration: none;
+	text-transform: uppercase;
+    display: block;
+    font-size: 13px;
+	font-weight: 600;
+	font-family: 'Raleway', Arial, sans-serif;
+    transition: 0.5s;
+    cursor: pointer;
+	border: 1px solid #556270;
+	letter-spacing: 1px;
+	text-align: center;
+}
+
+.box_button a:hover{
+	color: #111111;
+	background: transparent;
+	border-color: #111111;
+}
+
+/* --- 3.7. Architecture Area Seven --- */
+.architecture_area_seven{
 	position: relative;
 	display: flex;
 	flex-direction: column;
@@ -988,7 +1201,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 5em 0;
 }
 
-.architecture_area_five::before {
+.architecture_area_seven::before {
 	content: '';
 	position: absolute;
 	z-index: 1;
@@ -999,7 +1212,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	background: rgba(24, 25, 34, 0.6);
 }
 
-.architecture_group_five{
+.architecture_group_seven{
 	position: relative;
 	z-index: 5;
 	max-width: 1400px;
@@ -1045,7 +1258,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .review_box{
 	max-width: 450px;
-	margin: 0 auto;
+	margin: 0;
 	width: 100%;
 	padding: 0 20px;
 }
@@ -1075,18 +1288,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .review_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
 .client_content{
 	max-width: 300px;
-	margin: auto;
 	height: auto;
 	padding: 10px;
-	transition: 0.5s;
-	overflow: hidden;
 }
 
 .client_name{
@@ -1125,272 +1335,127 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 12px;
 }
 
-/* --- 3.6. Architecture Area Six --- */
-.architecture_area_six{
-	max-width: 1280px;
-	margin: 0 auto 9em;
-	padding: 0 30px;
-	position: relative;
-}
-
-.architecture_group_six{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	padding-top: 40px;
-}
-
-.blog_col{
-	flex: 25%;
-	width: 25%;
-	padding: 0 10px;
-	position: relative;
-}
-
-.blog_box{
-	max-width: 350px;
-	position: relative;
-	text-align: center;
-	overflow: hidden;
-	margin: auto;
-	min-height: 150px;
-	transition: 0.5s;
-}
-
-.blog_image{
-	overflow: hidden;
-	position: relative;
-}
-
-.blog_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	transition: 0.5s;
-	display: block;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-.blog_image > a > img{
-	transition: ease-in-out 3.25s;
-}
-
-.blog_image > a > img:hover{
-	transform: scale(1.15);
-}
-
-.blog_content{
-	max-width: 350px;
-	text-align: left;
-	padding-left: 5px;
-}
-
-.blog_date{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 14px;
-	display: block;
-	font-weight: 600;
-	color: #696969;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	text-align: left;
-	width: 250px;
-}
-
-.blog_title a{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 18px;
-	display: block;
-	font-weight: 600;
-	color: #111111;
-	letter-spacing: 1px;
-	text-align: left;
-	text-decoration: none;
-	transition: 0.5s;
-	line-height: 1.4em;
-}
-
-.blog_title a:hover,
-a.blog_btn:hover{
-	opacity: 0.6;
-}
-
-a.blog_btn{
-	max-width: 120px;	
-    color: #111111;
-    text-decoration: none;
-	text-transform: uppercase;
-    display: inline-block;
-    font-size: 13px;
-	font-weight: 600;
-	font-family: 'Raleway', Arial, sans-serif;
-    transition: 0.5s;
-    cursor: pointer;
-	letter-spacing: 1px;
-	text-align: center;
-	padding-bottom: 3px;
-	padding-top: 10px;
-}
-
-a.blog_btn::after{
-	content: "\203A";
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	height: auto;
-	padding-left: 5px;
-	top: 1px;
-	position: relative;
-}
-
-/* --- 3.7. Architecture Area Seven --- */
-.architecture_area_seven{
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	min-height: 400px;
-	height: 100%;
-	text-align: center;
-	background-color: #556270;
-}
-
 /* --- 3.8. Architecture Area Eight --- */
 .architecture_area_eight{
-	max-width: 1000px;
-	margin: 0 auto 2em;
+	max-width: 1280px;
+	margin: 0 auto 7em;
 	padding: 0 25px;
-	margin-top:  -300px;
 }
 
 .architecture_group_eight{
 	width: 100%;
-	padding: 30px 0;
-	background-color: #ffffff;
-	margin-top: 40px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.bg_head{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 40px;
-	font-weight: 700;
-	display: block;
-	color: #ffffff;
-	text-align: center;
-	letter-spacing: 1px;
-	line-height: 1.3em;
-	margin-top: 0;
-}
-
-.bg_info{
-	max-width: 600px;
-	margin: 0 auto;
-	font-family: 'Roboto' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
-	display: block;
-	color: #f2f2f2;
-	letter-spacing: 1px;
-	text-align: center;
-	padding: 10px 10px 0;
-	line-height: 1.5em;
-}
-
-.form_col{
-	max-width: 900px;
-	margin: auto;
-	padding: 0 25px 0;
+.architecture_form_col{
 	position: relative;
-	width: 100%;
-}
-
-.form_box{
-	width: 100%;
+	flex: 50%;
+	width: 50%;
 }
 
 .form_area{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-direction: row;
+	justify-content: flex-start;
 	align-items: center;
 }
 
-.form_box h3{
+.form_col_box{
+	max-width: 450px;
+	text-align: left;
+}
+
+.form_col_box h2{
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 25px;
+	font-size: 40px;
 	font-weight: 700;
 	letter-spacing: 1px;
-	text-align: center;
+	text-align: left;
 	display: block;
 	color: #111111;
-	line-height: 1.4em;
+	line-height: 1.3em;
 }
 
-.form-row{
-	flex-direction: row;
-	display: flex;
-	width: 100%;
-}
-
-.form_box input[type="text"],
-.form_box input[type="email"],
-.form_box input[type="password"]{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 13px;
-	padding: 4px 20px;
-	height: 40px;
-	border: none;
-	margin: 16px 10px;
-	border-bottom: solid 1px #696969;
-	flex-grow: 1;
-	letter-spacing: 1px;
-	transition: 0.5s;
-}
-
-.form_box textarea{
-	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 13px;
-	padding: 4px 20px;
-	border: none;
-	width: auto;
-	min-height: 200px;
-	margin: 16px 10px;
-	border-bottom: solid 1px #696969;
-	flex-grow: 1;
-	letter-spacing: 1px;
-	transition: 0.5s;
-}
-
-.form_box input[type="text"]:focus,
-.form_box input[type="email"]:focus,
-.form_box input[type="password"]:focus,
-.form_box textarea:focus{
-	border-bottom: 1px solid #111111;
-}
-
-.form_box input[type="submit"]{
-	display: block;
-	margin: 18px 10px;
-	width: auto;
-	padding: 10px 35px;
-	text-align: center;
-	font-family: 'Raleway' , Arial, sans-serif;
+.form_col_box p{
+	font-family: 'Roboto' , Arial, sans-serif;
 	font-size: 16px;
 	font-weight: normal;
+	display: block;
+	color: #696969;
+	letter-spacing: 1px;
+	text-align: left;
+	padding: 12px 0;
+	line-height: 1.5em;
+}
+
+.form-box{
+	text-align: right;
+	display: block;
+	max-width: 600px;
+}
+
+.form-row {
+	flex-direction: row;
+	display: flex;
+}
+
+.form-box input[type="text"],
+.form-box input[type="email"]{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 13px;
+	padding: 7px 20px;
+	height: 40px;
+	border: none;
+	margin: 8px 0;
+	border: solid 1px #e0e0e0;
+	flex-grow: 1;
+	letter-spacing: 1px;
+	transition: 0.5s;
+	background-color: #f6f6f6;
+}
+
+.form-box textarea{
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 13px;
+	padding: 7px 20px;
+	border: none;
+	width: auto;
+	min-height: 125px;
+	margin: 8px 0;
+	border: solid 1px #e0e0e0;
+	flex-grow: 1;
+	letter-spacing: 1px;
+	transition: 0.5s;
+	background-color: #f6f6f6;
+}
+
+.form-box input[type="text"]:focus,
+.form-box input[type="email"]:focus,
+.form-box textarea:focus{
+	outline: none;
+}
+
+.form-box input[type="submit"]{
+	margin: 8px 0;
+	width: 100%;
+	padding: 10px 0;
+	text-align: center;
+	font-family: 'Raleway' , Arial, sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
 	color: #ffffff;
-	border-radius: 3px;
 	letter-spacing: 1px;
 	background-color: #556270;
 	border: solid 1px #556270;
 	transition: 0.5s;
 }
 
-.form_box input[type="submit"]:hover{
+.form-box input[type="submit"]:hover{
 	background-color: #111111;
 	color: #ffffff;
-	border: solid 1px #111111;
+	border-color: #111111;
 }
 
 /* 4. FOOTER
@@ -1608,9 +1673,14 @@ a.footer-brand img{
 	}
 	
 	.blog_col{
-		flex: 50%;
-		width: 50%;
-		margin-bottom: 40px;
+		flex: 100%;
+		width: 100%;
+		max-width: 700px;
+		margin: auto;
+	}
+	
+	.top_level{
+		margin-bottom: 35px;
 	}
 }
 
@@ -1629,7 +1699,7 @@ a.footer-brand img{
 	}
 	
 	.navbar-header h2{
-		margin-top: 7px;
+		padding-top: 5px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1695,6 +1765,10 @@ a.footer-brand img{
 		padding-top: 25px;
 	}
 	
+	.header-title{
+		margin-left: 5vw;
+	}
+	
 	.featured_name{
 		width: 270px;
 	}
@@ -1708,7 +1782,12 @@ a.footer-brand img{
 		flex: 50%;
 		width: 50%;
 		margin-bottom: 30px;
-	}	
+	}
+
+	.architecture_form_col{
+		flex: 100%;
+		width: 100%;
+	}
 	
 	.footer_col{
 		flex: 50%;
@@ -1724,10 +1803,6 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 600px){
-	.header-title{
-		margin-left: 5vw;
-	}
-	
 	.header-title__main{
 		font-size: 30px;
 	}
@@ -1735,11 +1810,17 @@ a.footer-brand img{
 	.square_box h2,
 	.architecture_heading,
 	.review_box h2,
-	.bg_head{
+	.bg_head,
+	.form_col_box h2{
 		font-size: 30px;
 	}
 	
 	.border_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
+	.square_box_col{
 		flex: 100%;
 		width: 100%;
 	}
@@ -1755,16 +1836,25 @@ a.footer-brand img{
 	}
 	
 	.blog_col{
+		max-width: 350px;
+	}
+	
+	.blog_area{
 		flex: 100%;
 		width: 100%;
+	}
+	
+	.blog_group{
+		padding-bottom: 0;
 	}
 	
 	.blog_date{
 		margin-top: 0;
 	}
 	
-	.form-row{
-		flex-direction: column;
+	.client_col{
+		flex: 100%;
+		width: 100%;
 	}
 	
 	.footer_col{
@@ -1774,31 +1864,19 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 420px){
-	.square_box_col{
-		flex: 100%;
-		width: 100%;
-	}
-	
 	.square_col_left,
 	.square_col_right,
+	.square_box,
 	.blog_col,
 	.review_col_left,
-	.review_col_right{
+	.review_col_right,
+	.review_box{
 		padding: 0;
 	}
 	
 	.featured_col{
 		padding-left: 0;
 		padding-right: 0;
-	}
-	
-	.client_col{
-		flex: 100%;
-		width: 100%;
-	}
-	
-	.form_col{
-		padding: 0 15px;
 	}
 }
 
