--- a/restaurant.css
+++ b/restaurant.css
@@ -3,8 +3,8 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    27/05/2021
-Author:    Themewiz
+Last change:    10/10/2021
+Author:    creativemaze
 Primary use:    Restaurant
 -------------------------------------------------------------------*/
 
@@ -163,12 +163,18 @@ ul{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	margin: 0;
+	padding-top: 12px;
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
-	color: #111111 !important;
+	color: #111111;
 	transition: 0.5s;
+}
+
+.navbar-header a.navbar-brand:hover{
+	color: #111111;
 }
 
 nav.navbar .navbar-brand img.logo{
@@ -548,12 +554,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .prev_button,
 .next_button{
 	width: auto;
-	font-size: 18px;
+	font-size: 14px;
 	transition: 0.6s ease;
 	border-radius: 0 3px 3px 0;
 	background-color: transparent;
 	display: block;
-	padding: 10px 20px;
+	padding: 10px 16px;
 	color: #333333;
 	cursor: pointer;
 	border: solid 1px #333333;
@@ -672,14 +678,15 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	left: 50%;
 	transform: translateX(-50%);
 	margin-bottom: 20px;
-	width: 230px;
+	max-width: 230px;
+	width: calc(100% - 30px);
 	padding: 10px 20px;
 	background: rgba(255,255,255,0.8);
 }
 
 .price_box h4{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 17px;
+	font-size: 16px;
 	font-weight: 600;
 	display: block;
 	color: #111111;
@@ -747,9 +754,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 /* --- 3.2. Restaurant Area Two --- */
 .restaurant_area_two{
 	width: 100%;
-	margin: 0 0 9em;
+	margin: 0;
 	min-height: 400px;
-	padding: 7em 25px;
+	padding: 8.5em 25px 7em;
 	background-color: #f6f6f6;
 }
 
@@ -852,7 +859,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	margin-bottom: 9em;
 	background: #e53935;
-	padding: 5em 0;
+	padding: 6em 0;
 }
 
 .restaurant_group_three{
@@ -967,18 +974,18 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 1.3rem;
 	height: 1.3rem;
 	padding: 0;		
-	border: solid 1px #ffffff;
+	border: solid 1px #e0e0e0;
 	border-radius: 100%;
 	background-color: transparent;
 	text-indent: -9999px;
 }
 
 li.slick-active button{
-	background-color: #111111;
+	background-color: #ffffff;
 }
 
 .slick-dots button:hover{
-	background-color: #111111;
+	background-color: #ffffff;
 }
 
 .slick-dots li{
@@ -1003,7 +1010,7 @@ li.slick-active button{
 .restaurant_icon_col{
 	flex: 25%;
 	width: 25%;
-	padding: 0 20px;
+	padding: 0 25px;
 }
 
 .restaurant_icon_box{
@@ -1038,7 +1045,6 @@ li.slick-active button{
 	color: #e53935;
 	text-align: center;
 	display: block;
-	transition: 0.5s;
 }
 
 .restaurant_icon_box p{
@@ -1050,40 +1056,7 @@ li.slick-active button{
 	color: #696969;
 	letter-spacing: 1px;
 	text-align: center;
-	transition: 0.5s;
 	line-height: 1.5em;
-}
-
-.area_button > a{
-	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 12px;
-	font-weight: 600;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	text-align: center;
-	display: block;
-	color: #e53935;
-	text-decoration: none;
-	width: 110px;
-	transition: 0.5s;
-	margin: auto;
-    cursor: pointer;
-}
-
-.area_button > a::after{
-	content: "\203A";
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	height: auto;
-	padding-left: 5px;
-	top: 1px;
-	position: relative;
-}
-
-.area_button > a:hover{
-	color: #111111;
 }
 
 /* --- 3.5. Restaurant Area Five --- */
@@ -1205,7 +1178,7 @@ li.slick-active button{
 	text-transform: uppercase;
     display: block;
     font-size: 13px;
-	font-weight: 700;
+	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
@@ -1269,10 +1242,9 @@ li.slick-active button{
 }
 
 .blog_content{
-	padding: 25px 0;
+	padding: 20px 0;
 	text-align: left;
 	padding-left: 15px;
-	padding-right: 5px;
 }
 
 .blog_date{
@@ -1337,20 +1309,16 @@ a.blog_btn:hover,
 a.blog_btn{
 	max-width: 120px;	
     color: #111111;
-	border-bottom: solid 2px #111111;
-	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
-    display: inline-block;
+    display: block;
     font-size: 13px;
 	font-weight: 600;
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
 	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.2em;
-	padding-bottom: 3px;
+	text-align: left;
 }
 
 a.blog_btn::after{
@@ -1484,7 +1452,6 @@ a.blog_btn::after{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: .5s;
 }
 
 .form_area{
@@ -1551,7 +1518,7 @@ a.blog_btn::after{
 	padding: 4px 20px;
 	border: none;
 	width: auto;
-	min-height: 200px;
+	min-height: 175px;
 	margin: 16px 10px;
 	border-bottom: solid 1px #696969;
 	flex-grow: 1;
@@ -1570,11 +1537,12 @@ a.blog_btn::after{
 	display: block;
 	margin: 18px 10px;
 	width: auto;
-	padding: 10px 35px;
+	padding: 10px 25px;
 	text-align: center;
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 16px;
-	font-weight: normal;
+	font-size: 13px;
+	font-weight: 600;
+	text-transform: uppercase;
 	color: #ffffff;
 	border-radius: 5px;
 	letter-spacing: 1px;
@@ -1753,15 +1721,6 @@ a.footer-brand img{
 		height: auto;
 	}
 	
-	.menu_col_right_mid,
-	.menu_col_mid{
-		flex: 100%;
-		width: 100%;
-		max-width: 400px;
-		margin: auto;
-		display: block;
-	}
-	
 	.restaurant_icon_col{
 		flex: 50%;
 		width: 50%;
@@ -1806,7 +1765,7 @@ a.footer-brand img{
 	}
 	
 	.navbar-header h2{
-		margin-top: 7px;
+		padding-top: 5px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1876,6 +1835,15 @@ a.footer-brand img{
 		font-size: 60px;
 	}
 	
+	.menu_col_right_mid,
+	.menu_col_mid{
+		flex: 100%;
+		width: 100%;
+		max-width: 400px;
+		margin: auto;
+		display: block;
+	}
+	
 	.menu_col_left,
 	.menu_col_right{
 		flex: 100%;
@@ -1930,6 +1898,11 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.special_col{
+		flex: 100%;
+		width: 100%;
+	}
+	
 	.restaurant_icon_col{
 		flex: 100%;
 		width: 100%;
@@ -1959,11 +1932,6 @@ a.footer-brand img{
 		flex: 100%;
 		width: 100%;
 		padding-bottom: 10px;
-	}
-	
-	.special_col{
-		flex: 100%;
-		width: 100%;
 	}
 	
 	.menu_col_box,
